# IptvPlayer

./: .gitignore  README.md  build.gradle  settings.gradle
IptvPlayer/: build.gradle
IptvPlayer/libs/: ijkplayer-arm64-release.aar  ijkplayer-armv7a-release.aar  ijkplayer0.8.8-arm64-release.aar  ijkplayer0.8.8-armv7a-release.aar  ijkplayer0.8.8-exo-release.aar  ijkplayer0.8.8-java-release.aar
IptvPlayer/src/main/: AndroidManifest.xml
IptvPlayer/src/main/assets/source/ChinaMobile/: 025_001.json
IptvPlayer/src/main/assets/source/ChinaTelecom/: 029_001.json
IptvPlayer/src/main/assets/source/ChinaUnicom/: 0531_001.json  0731_001.json  iptv_source.json
IptvPlayer/src/main/assets/source/misc/: misc_001.json
IptvPlayer/src/main/assets/source/unknown/: misc_001.json
IptvPlayer/src/main/java/dai/android/video/iptv/: App.java  MainActivity.java
IptvPlayer/src/main/java/dai/android/video/iptv/client/: RtspClient.java
IptvPlayer/src/main/java/dai/android/video/iptv/data/: Address.java  Category.java  Source.java  UrlBox.java
IptvPlayer/src/main/java/dai/android/video/iptv/module/: AddressManager.java  ILoader.java
IptvPlayer/src/main/java/dai/android/video/iptv/network/: IHttpCallBack.java  UrlFetcher.java
IptvPlayer/src/main/java/dai/android/video/iptv/player/: AbstractPlayMonitor.java  DtMediaPlay.java  IMonitorWrapper.java  IPlayMonitor.java  LivePlayerManager.java  LivePlayerManager.java.back
IptvPlayer/src/main/res/layout/: activity_main.xml
IptvPlayer/src/main/res/values/: strings.xml  styles.xml
LibCore/: build.gradle
LibCore/src/main/: AndroidManifest.xml
LibCore/src/main/java/dai/android/core/log/: Logger.java
LibCore/src/main/java/dai/android/core/network/: IHttpCallBack.java  UrlFetcher.java
LibCore/src/main/java/dai/android/core/utility/: Assets.java
LibDtplayer/: CMakeLists.txt  build.gradle
LibDtplayer/doc/: build-for-android.sh
LibDtplayer/src/main/: AndroidManifest.xml
LibDtplayer/src/main/ccpp/dt/dtaudio/: ad_wrapper.h  dtaudio.c  dtaudio.h  dtaudio_api.c  dtaudio_api.h  dtaudio_decoder.c  dtaudio_decoder.h  dtaudio_filter.c  dtaudio_output.c  dtaudio_output.h
LibDtplayer/src/main/ccpp/dt/dtaudio/audio_decoder/: ad_faad.c  ad_ffmpeg.c
LibDtplayer/src/main/ccpp/dt/dtaudio/audio_out/: ao_alsa.c
LibDtplayer/src/main/ccpp/dt/dtdemux/: demuxer_wrapper.h  dtdemuxer.c  dtdemuxer.h  dtdemuxer_api.c  dtdemuxer_api.h
LibDtplayer/src/main/ccpp/dt/dtdemux/demuxer/: demuxer_aac.c  demuxer_ffmpeg.c  demuxer_ts.c
LibDtplayer/src/main/ccpp/dt/dtdemux/demuxer/ts/: cat.c  p_tsdemux.h  packet.c  pat.c  pid.c  pmt.c  stream.c  table.c  tsdemux.h  tsdump.c  types.c
LibDtplayer/src/main/ccpp/dt/dthost/: dthost.c  dthost.h  dthost_api.c  dthost_api.h
LibDtplayer/src/main/ccpp/dt/dtplayer/: dtplayer.c  dtplayer.h  dtplayer_api.c  dtplayer_frame.c  dtplayer_host.c  dtplayer_host.h  dtplayer_io.c  dtplayer_io.h  dtplayer_magic.c  dtplayer_magic.h  dtplayer_update.c  dtplayer_update.h
LibDtplayer/src/main/ccpp/dt/dtport/: dt_packet_queue.c  dt_packet_queue.h  dtport.c  dtport.h  dtport_api.c  dtport_api.h
LibDtplayer/src/main/ccpp/dt/dtstream/: dtstream.c  dtstream.h  dtstream_api.c  dtstream_api.h  stream_wrapper.h
LibDtplayer/src/main/ccpp/dt/dtstream/stream/: stream_cache.c  stream_curl.c  stream_ffmpeg.c  stream_file.c
LibDtplayer/src/main/ccpp/dt/dtsub/: dtsub.c  dtsub.h  dtsub_api.c  dtsub_api.h  dtsub_decoder.c  dtsub_decoder.h  dtsub_filter.c  dtsub_filter.h  dtsub_output.c  dtsub_output.h  dtsub_parser.c  sd_wrapper.h  sf_wrapper.h
LibDtplayer/src/main/ccpp/dt/dtsub/sub_decoder/: sd_ffmpeg.c
LibDtplayer/src/main/ccpp/dt/dtsub/sub_output/: so_null.c
LibDtplayer/src/main/ccpp/dt/dtutils/: commander.c  commander.h  dt_buffer.c  dt_buffer.h  dt_event.c  dt_event.h  dt_ini.c  dt_ini.h  dt_ini_old.c  dt_ini_old.h  dt_interrupt.c  dt_interrupt.h  dt_log.c  dt_log.h  dt_mem.c  dt_mem.h  dt_queue.c  dt_queue.h  dt_setting.c  dt_time.c  dt_time.h
LibDtplayer/src/main/ccpp/dt/dtvideo/: dtvideo.c  dtvideo.h  dtvideo_api.c  dtvideo_api.h  dtvideo_decoder.c  dtvideo_decoder.h  dtvideo_filter.c  dtvideo_output.c  dtvideo_output.h  vd_wrapper.h
LibDtplayer/src/main/ccpp/dt/dtvideo/video_decoder/: vd_ffmpeg.c
LibDtplayer/src/main/ccpp/dt/dtvideo/video_filter/: vf_ffmpeg.c
LibDtplayer/src/main/ccpp/dt/dtvideo/video_out/: vo_dx.c  vo_fb.c  vo_gl.c  vo_null.c  vo_x11.c
LibDtplayer/src/main/ccpp/dt/tools/: ao_sdl.c  ao_sdl2.c  dt_player.c  dt_probe.c  gui.h  gui_sdl.c  so_sdl2.c  version.c  version.h  vo_sdl2.c
LibDtplayer/src/main/ccpp/dtandroid/: dttv_jni.cpp  dttv_jni.h  dttv_jni_cmd.h  dttv_jni_dtp.cpp  dttv_jni_dtp.h  dttv_jni_surface.cpp  dttv_jni_surface.h  dttv_jni_utils.c  dttv_jni_utils.h
LibDtplayer/src/main/ccpp/dtandroid/plugin/: plugin_ao_opensl.c  plugin_so_android.cpp  plugin_vo_surface.cpp
LibDtplayer/src/main/ccpp/include/dt/: dtp.h  dtp_audio_plugin.h  dtp_av.h  dtp_sub_plugin.h  dtp_vf.h  dtp_video_plugin.h
LibDtplayer/src/main/java/dai/android/media/dt/: MediaFile.java  MediaFormat.java  MediaPlayer.java  Metadata.java
LibDtplayer/src/main/java/dai/android/media/dt/subtitle/: SubtitleFrame.java
LibDtplayer/src/main/java/dai/android/media/dt/utils/: FileUtils.java  IOUtils.java  Log.java  MultiMediaTypeUtil.java  MusicUtils.java  StorageUtils.java  TimesUtil.java  VolumeUtil.java
LibMediaProxy/: build.gradle
LibMediaProxy/src/main/: AndroidManifest.xml
LibMediaProxy/src/main/java/dai/android/media/proxy/: AbstractMediaPlayer.java  AndroidMediaPlayer.java  IMediaPlayer.java  IPlayCallBack.java  MediaPlayerProxy.java
Libdtplayer/: CMakeLists.txt  build.gradle
Libdtplayer/src/main/: AndroidManifest.xml
RtspPlayer/: build.gradle
RtspPlayer/src/androidTest/java/dai/android/video/rtsp/: ExampleInstrumentedTest.kt
RtspPlayer/src/main/: AndroidManifest.xml
RtspPlayer/src/main/java/dai/android/video/rtsp/: MainActivity.kt
RtspPlayer/src/main/res/values/: strings.xml
RtspPlayer/src/test/java/dai/android/video/rtsp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+11 files in other folders)
